<resources>
    <string name="app_name">Zalik</string>

    <!-- Bottom navigation -->

    <string name="navigation_qr">QR-код</string>
    <string name="navigation_venues">Заведения</string>
    <string name="navigation_cards">Карточки</string>
    <string name="navigation_map">Карта</string>
    <string name="navigation_profile">Профиль</string>

    <!-- Qr -->

    <string name="qr_show_this_code">Покажите этот код кассиру\nили назовите номер</string>

    <!-- Venues -->

    <string name="venues_empty">Здесь пусто и очень грустно…</string>
    <string name="venues_list_title">Список заведений</string>
    <plurals name="venues_plurals">
        <item quantity="zero">Нет заведений</item>
        <item quantity="one">%1$d заведение</item>
        <item quantity="two">%1$d заведения</item>
        <item quantity="few">%1$d заведения</item>
        <item quantity="many">%1$d заведений</item>
        <item quantity="other">%1$d заведений</item>
    </plurals>

    <!-- Venue -->

    <string name="venue_cards_in_this_venue">Карточки в этом заведении</string>
    <string name="venue_description">Описание</string>
    <string name="venue_about_this_venue">О заведении</string>
    <string name="venue_address">Адрес</string>
    <string name="venue_schedule">Время работы</string>
    <string name="venue_phone">Телефоны</string>
    <string name="venue_web_site">Веб-сайт</string>
    <string name="venue_km_distance">%1$.2f км</string>

    <!-- Cards -->

    <string name="cards_title">Мои карточки</string>
    <string name="cards_empty">Здесь пусто и очень грустно…</string>
    <string name="card_number_of_stamps">Количество штампов:</string>
    <plurals name="cards_plurals">
        <item quantity="zero">Нет карточек</item>
        <item quantity="one">%1$d карточка</item>
        <item quantity="two">%1$d карточки</item>
        <item quantity="few">%1$d карточки</item>
        <item quantity="many">%1$d карточек</item>
        <item quantity="other">%1$d карточек</item>
    </plurals>

    <plurals name="cards_days_left_plurals">
        <item quantity="zero">Акция заканчивается сегодня</item>
        <item quantity="one">%1$d день до окончания акции</item>
        <item quantity="two">%1$d дня до окончания акции</item>
        <item quantity="few">%1$d дня до окончания акции</item>
        <item quantity="many">%1$d дней до окончания акции</item>
        <item quantity="other">%1$d дней до окончания акции</item>
    </plurals>

    <!-- Map -->

    <string name="map_more_information">Ознакомиться подробнее</string>

</resources>
